Update _pagination.scss to fix overflow bug with pagination

--- a/bootstrap/source/_pagination.scss
+++ b/bootstrap/source/_pagination.scss
@@ -1,5 +1,6 @@
 .pagination {
   display: flex;
+  overflow: scroll;
   @include list-unstyled();
   @include border-radius();
 }
